--- a/platforms/android/build.gradle
+++ b/platforms/android/build.gradle
@@ -34,9 +34,9 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
         classpath 'com.google.gms:google-services:3.0.0'
-
     }
 }
+
 
 // Allow plugins to declare Maven dependencies via build-extras.gradle.
 allprojects {
@@ -259,7 +259,24 @@ dependencies {
     compile "com.android.support:support-v13:26.+"
     compile "me.leolin:ShortcutBadger:1.1.17@aar"
     compile "com.google.firebase:firebase-messaging:11.6.2"
+    
     // SUB-PROJECT DEPENDENCIES END
+     configurations.all {
+       resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+           def requested = details.requested
+           if (requested.group == 'com.google.android.gms') {
+               details.useVersion '11.8.0'
+           }
+       }
+   }
+     configurations.all {
+       resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+           def requested = details.requested
+           if (requested.group == 'com.google.firebase') {
+               details.useVersion '11.8.0'
+           }
+       }
+   }
 }
 
 def promptForReleaseKeyPassword() {
